compile_log.txt
Calculating task graph as configuration cache cannot be reused because system property 'stderr.encoding' has changed.
> Task :app:processResources UP-TO-DATE
> Task :app:compileJava UP-TO-DATE
> Task :app:classes UP-TO-DATE

> Task :app:compileTestJava FAILED
C:\Development\Owner\FirstRentVerdict\app\src\test\java\firstrentverdict\AppTest.java:7: error: package org.springframework.boot.test.context does not exist
import org.springframework.boot.test.context.SpringBootTest;
                                            ^
C:\Development\Owner\FirstRentVerdict\app\src\test\java\firstrentverdict\AppTest.java:9: error: cannot find symbol
@SpringBootTest
 ^
  symbol: class SpringBootTest
C:\Development\Owner\FirstRentVerdict\app\src\test\java\firstrentverdict\DataIntegrationTest.java:7: error: package org.springframework.boot.test.context does not exist
import org.springframework.boot.test.context.SpringBootTest;
                                            ^
C:\Development\Owner\FirstRentVerdict\app\src\test\java\firstrentverdict\DataIntegrationTest.java:13: error: cannot find symbol
@SpringBootTest
 ^
  symbol: class SpringBootTest
4 errors

[Incubating] Problems report is available at: file:///C:/Development/Owner/FirstRentVerdict/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Development\Owner\FirstRentVerdict\app\src\test\java\firstrentverdict\AppTest.java:7: error: package org.springframework.boot.test.context does not exist
  import org.springframework.boot.test.context.SpringBootTest;
                                              ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 2s
3 actionable tasks: 1 executed, 2 up-to-date
Configuration cache entry stored.
